# OpenGL_Drone_ML

./: .gitignore  CMakeLists.txt  LICENSE  README.md
OpenGL_Drone_ML/: CMakeLists.txt  requirements.txt
OpenGL_Drone_ML/include/: GLError.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  example.h
OpenGL_Drone_ML/ml_service/: Dockerfile  requirements.txt
OpenGL_Drone_ML/ml_service/ml_server/: example.py  helpers.py  helpers2D.py  helpers3D.py  helpersBasic.py  helpersSurvey.py  left_right.py  ml_landing.py  old _server.py  pointnet_small.py  safe_landing_model.pt  server.py  train_pointnet.py
OpenGL_Drone_ML/ml_service/ml_server/tests/: test2D.py
OpenGL_Drone_ML/res/shaders/: Basic2.shader
OpenGL_Drone_ML/src/: Application.cpp  GLError.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
OpenGL_Drone_ML/tests/: CooperTest.cpp  CooperTest.h  Test.cpp  Test.h  Test2DMultiTexture.cpp  Test2DMultiTexture.h  Test3DA.cpp  Test3DA.h  Test3DB.cpp  Test3DB.h  Test3DC.cpp  Test3DC.h  Test3DSurvey.cpp  Test3DSurvey.h  TestClearColor.cpp  TestClearColor.h  TestServer2D.cpp  TestServer2D.h  TestTexture2D.cpp  TestTexture2D.h
res/shaders/: Basic.shader
